--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,25 @@
 /* .logo-img img{
 	width: 80%;
 } */
-
+body {
+	overflow-x: hidden;
+}
 .slider-content,
 .wood-types-content,
 .wedo-content,
 .map-content,
-.footer-content{
+.footer-content,
+.contact-form-content {
 	padding-bottom: 0.85em;
 	padding-top: 1em;
 }
-.navbar-nav{
+.navbar-nav {
 	font-size: 1 em;
     color: black;
 	font-weight: 600;
 
 }
-.types-header{
+.types-header {
 	padding:0.75em;
 
 }
@@ -26,4 +29,7 @@
     right: 0;
     left: 0;
     z-index: 1030;
+}
+.wedo-content,.contact-form-content {
+	background-color: #e4b6668a;
 }
