refactoring + new menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,14 +7,14 @@ body {
 .slider-content,
 .wood-types-content,
 .wedo-content,
-.map-content,
+/*.map-content,*/
 .footer-content,
-.contact-form-content {
+/*.contact-form-content */{
 	padding-bottom: 0.85em;
 	padding-top: 1em;
 }
 .navbar-nav {
-	font-size: 1 em;
+	font-size: 1.2em;
     color: black;
 	font-weight: 600;
 
@@ -30,6 +30,26 @@ body {
     left: 0;
     z-index: 1030;
 }
-.wedo-content,.contact-form-content {
+.wedo-content/*,.contact-form-content*/ {
 	background-color: #e4b6668a;
 }
+.c-form,.map{
+	padding: 0.5em;
+}
+.menu{
+	padding-top: 0.85em;
+}
+.menu ul {
+	padding-left: 11em;
+}
+.navigation-content nav{
+	background-color: #f0d7ac;
+}
+.navbar {
+	margin-bottom: 0px !important;
+	min-height: 68px !important;
+	border-radius: 0px !important;
+}
+/*.container {
+	width: 1270px !important;
+}*/
